--- a/index.html
+++ b/index.html
@@ -1,6 +1,36 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <title>Log In</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="icon" href="https://otakuruma.com/cdn/shop/products/shinobu3_philivix_finished.png?v=1646200941">
+    </head>
+    <body>
+        <div class="Form">
+            <h2>Inicio de Sesion</h2>
+            <form method="post">
+                <div class="username">
+                    <input type="text" required>
+                    <label>Usuario</label>
+                </div>
+                <div class="contra">
+                    <input type="password" required>
+                    <label>Contraseña</label>
+                </div>
+                <div class="recordar">Olvidaste la contraseña?</div>
+                <input type="submit" value="Iniciar">
+                <div class="Registrar">
+                    Quiero <a href="#">Registrarme</a>
+                </div>
+            </form>
+        </div>
+    </body>
+</html>
+
+<!--
+<!DOCTYPE html>
+<html lang="es">
+    <head>
         <title>
             Project Nass
         </title>
@@ -60,3 +90,4 @@
         </footer>
     </body>
 </html>
+-->
